--- a/ReMix/ReMix.csproj
+++ b/ReMix/ReMix.csproj
@@ -12,4 +12,10 @@
     <PackageReference Include="NAudio" Version="2.1.0" />
   </ItemGroup>
 
+    <ItemGroup>
+        <Content Include="Audio\**\*.*">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
+
 </Project>
